# fastauth

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  docs.yaml  documentation.yaml  master.yaml  python-package.yml  release.yaml
api/: index.html
api/config/: index.html
api/fastauth/: index.html
api/manager/: index.html
api/models/: index.html
api/repositories/: index.html
api/schema/: index.html
api/strategy/: index.html
api/transport/: index.html
api/types/: index.html
api/utils/: index.html
begin/configuration/: index.html
begin/installation/: index.html
configuration/auth_manager/: index.html
configuration/fastauth/: index.html
configuration/models/: index.html
configuration/repositories/: index.html
configuration/schema/: index.html
configuration/token_strategy/: index.html
configuration/transport/: index.html
contrib/: index.html
contrib/sqlalchemy/: index.html
docs/: features.md  index.md  installation.md  oauth.md  routers.md
docs/api/: config.md  fastauth.md  index.md  manager.md  models.md  repositories.md  schema.md  strategy.md  types.md  utils.md
docs/begin/: installation.md
docs/configuration/: auth_manager.md  fastauth.md  models.md  repositories.md  schema.md  token_strategy.md  transport.md
docs/snippets/: manager.py
examples/: db.py
examples/sqlaclhemy_full/: __init__.py  app.py  dependency.py  models.py
examples/sqlalchemy_full/: __init__.py  app.py  db.py  dependencies.py  dependency.py  (+5 more)
fastauth/: __init__.py  _callback.py  config.py  exceptions.py  fastauth.py  fastauth.test.py  manager.py  repository.py  schema.py  types.py
features/: index.html
installation/: index.html
oauth/: index.html
routers/: index.html
search/: search_index.json
tests/: conftest.py  test_auth_manager.py  test_callback.py  test_fastauth.py  test_schema.py
(+128 files in other folders)
