[tool.poetry]
name = "fastauth"
version = "0.1.0"
description = ""
authors = ["AstralMortem <chaliukvladyslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyjwt = {extras = ["argon2", "bcrypt"], version = "^2.10.0"}
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.1"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
makefun = "^1.15.6"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
