[tool.poetry]
name = "fastauth"
version = "0.0.2"
description = "Ready-to-use customizable lib for FastAPI with Authentication, OAuth2, RBAC and User management, with rich ORM support"
readme = "README.md"
license="MIT"
authors = ["Vladyslav Chaliuk <chaliukvladyslav@gmail.com>"]
repository = "https://github.com/AstralMortem/fastauth"
keywords = [
    "FastAPI",
    "Authentication",
    "Authorization",
    "OAuth2",
    "RBAC",
    "Pydantic",
    "JWT",
    "Cookie",
    "ORM"
]

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = {extras = ["argon2", "bcrypt"], version = "^2.10.0"}
pydantic = {extras = ["email"], version = "^2.10.2"}
pydantic-settings = "^2.6.1"
pwdlib = {extras = ["argon2", "bcrypt"], version = "^0.2.1"}
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
makefun = "^1.15.6"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.19"
httpx-oauth = "^0.15.1"


[tool.poetry.extras]
sqlalchemy = ["sqlalchemy", "aiosqlite", "asyncpg"]
oauth2 = ["https-oauth"]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.47"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
